Preparing for 1.6.7 release
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1365596 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,21 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 1.6.7
+=============
+
+Bug
+
+    [WSS-392] - WSS4J can't handle SAML KeyIdentifier references to encrypted SAML Assertions stored in the cache
+    [WSS-393] - WSS4J is not handling KeyIdentifier inside SecurityTokenReference inside a KeyInfo
+    [WSS-394] - WSS4J is not handling X509Data inside SecurityTokenReference inside a KeyInfo
+    [WSS-396] - ConcurrentModificationException in MemoryReplayCache.processTokenExpiry
+    [WSS-398] - Can't create a UsernameToken without a password
+
+Improvement
+
+    [WSS-395] - Support Certificate Constraints on the Subject DN of the certificate used for signature validation
+
 Release 1.6.6
 =============
 
