--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,13 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 1.6.9
+=============
+
+Bug
+
+    [WSS-417] - Cannot deploy WSS4J 1.6.8 to an OSGi container
+
 Release 1.6.8
 =============
 
