Preparing for 1.6.11 release
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/1_6_x-fixes@1501319 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,17 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 1.6.11
+=============
+
+Improvement
+
+    [WSS-441] - Allow the date/time in the security headers to be spoofed
+
+Task
+
+    [WSS-434] - Add ValueType attribute to a Signature/Encryption Reference to a DerivedKeyToken
+
 Release 1.6.10
 =============
 
