Preparing for release
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/1_6_x-fixes@1541522 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,16 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 1.6.13
+=============
+
+Improvement
+
+    [WSS-428] - It should be possible to use the useReqSigCert even when the certificate is not sent in the request
+    [WSS-477] - Support the ability to create SAML2 Assertions with OneTimeUse + ProxyRestriction Conditions
+    [WSS-478] - Support the ability to cache SAML2 Assertions with "OneTimeUse" Conditions
+    [WSS-483] - wsse:Reference without ValueType
+
 Release 1.6.12
 =============
 
