Getting ready for next release
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/branches/1_6_x-fixes@1555062 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,13 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 1.6.14
+=============
+
+Bug
+
+    [WSS-488] - Regression in parsing SecurityTokenReferences inside of a SAML Signature KeyInfo
+
 Release 1.6.13
 =============
 
