Updating README etc.
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1563827 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,51 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+
+Release 1.6.14
+=============
+
+Bug
+
+    [WSS-488] - Regression in parsing SecurityTokenReferences inside of a SAML Signature KeyInfo
+
+Release 1.6.13
+=============
+
+Improvement
+
+    [WSS-428] - It should be possible to use the useReqSigCert even when the certificate is not sent in the request
+    [WSS-477] - Support the ability to create SAML2 Assertions with OneTimeUse + ProxyRestriction Conditions
+    [WSS-478] - Support the ability to cache SAML2 Assertions with "OneTimeUse" Conditions
+    [WSS-483] - wsse:Reference without ValueType
+
+Release 1.6.12
+=============
+
+Bug
+
+    [WSS-418] - Cannot configure SAML properties in WSS4JOutInterceptor without having to add that config file in the classpath
+    [WSS-473] - BST signature element
+    [WSS-474] - Missing the 'EncodingType' attribute in element built by STRTransformUtil#createBSTX509
+    [WSS-475] - Issue with multiple processing of ReferenceList in EncryptedKey element
+
+Improvement
+
+    [WSS-465] - Possible information leak: incremental IDs
+    [WSS-467] - Support creating SAML 2.0 Tokens with the AuthnStatement SessionNotOnOrAfter attribute.
+    [WSS-476] - Add the ability to configure the Signature Canonicalization Algorithm via WSHandler
+
+Release 1.6.11
+=============
+
+Improvement
+
+    [WSS-441] - Allow the date/time in the security headers to be spoofed
+
+Task
+
+    [WSS-434] - Add ValueType attribute to a Signature/Encryption Reference to a DerivedKeyToken
+
 Release 1.6.10
 =============
 
