Updating the ChangeLog
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1583934 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,17 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 1.6.15
+=============
+
+Bug
+
+    [WSS-491] - Problem storing custom Principals
+    [WSS-492] - WSS4J adds invalid wsu:Id attribute on SAML assertions
+
+Improvement
+
+    [WSS-495] - Add support to configure the digest method used for SAML Assertions
 
 Release 1.6.14
 =============
