Adding release notes for 2.1.0
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1675369 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,23 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 2.1.0
+=============
+
+Bug
+
+    [WSS-535] - Add WSSE and WSU xmlns definitions to signature's SecurityTokenReference
+    [WSS-536] - WSSecurityUtil.getCipherInstance() does not use configured provider
+
+Improvement
+
+    [WSS-529] - Support Inclusive C14N via policy
+    [WSS-530] - Add a property to enforce that a received Timestamp has an "Expires" Element
+    [WSS-531] - Only create an EncryptedHeader if the parent node is the SOAP Header
+    [WSS-533] - Also use signing key when trying to detect message replay attacks
+    [WSS-534] - Allow SupportingToken policies to have more than one token
+
+
 Release 2.0.3
 =============
 
