--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,14 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 2.1.1
+=============
+
+Bug
+
+    [WSS-538] - Signing/Validating SAML Assertions not working in an OSGi container
+
+
 Release 2.1.0
 =============
 
