--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,22 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 2.1.4
+=============
+
+Bug
+
+    [WSS-552] - The KerberosServiceExceptionAction and KerberosClientExceptionAction do not support HP JDK
+    [WSS-553] - <wsu:Expires> and <wsu:Created> elements not use UTC time format
+    [WSS-556] - Basic256Sha256 policy uses wrong minimum symmetric key length for signature
+    [WSS-557] - Using MTOM and WS-Security leads to "Attachment not found"
+    [WSS-559] - NullPointerException in TimestampInputHandler.checkBSPCompliance
+
+Improvement
+
+    [WSS-554] - Improved error message for timestamp in the future
+
+
 Release 2.1.3
 =============
 
