--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,20 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 2.1.6
+=============
+
+Bug
+
+    [WSS-577] - Binary compatibility broken between version <=2.1.3 and >=2.1.4 with org.apache.wss4j.dom.WSSecurityEngineResult
+    [WSS-578] - Binary compatibility breaks between 2.1.5 and 2.1.6-SNAPSHOT
+    [WSS-580] - ThreadLocalSecurityProvider returns null instead of empty collection
+
+New Feature
+
+    [WSS-575] - Support for Digest other than sha1 in xenc:EncryptionMethod
+
+
 Release 2.1.5
 =============
 
