Updating release notes for 2.1.10
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1798703 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,18 @@ for a given release.
 Portions of this report were generated using the ReleaseNotes facility
 in Jira.
 
+Release 2.1.10
+==============
+
+Improvement
+
+    [WSS-608] - Allow policy tokens not to have a wsp:Policy child element
+
+New Feature
+
+    [WSS-606] - Possibility to configure the SAML attribute //Assertion/Subject/NameID/@SPProvidedID in a CallbackHandler
+
+
 Release 2.1.9
 =============
 
