Fixing some links
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1844225 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/asciidoc/newfeatures20.adoc
+++ b/src/site/asciidoc/newfeatures20.adoc
@@ -36,7 +36,7 @@ implementation.
 ==== Streaming (StAX) based WS-Security implementation
 
 WSS4J 2.0.0 introduces a new streaming (StAX) based WS-Security implementation.
-Please see the dedicated link:../streaming.html[page] for more information.
+Please see the dedicated link:streaming.html[page] for more information.
 
 ==== WS-SecurityPolicy support
 
@@ -61,7 +61,7 @@ DoS based scenarios.
 
 WSS4J 2.0.0 introduces support for signing and encrypting SOAP message
 attachments, via the the SOAP with Attachments (SWA) Profile 1.1 specification.
-Please see the dedicated link:../attachments.html[page] for more
+Please see the dedicated link:attachments.html[page] for more
 information.
 
 ==== Replay Attack detection using EhCache
